--- a/code/css/main.css
+++ b/code/css/main.css
@@ -63,28 +63,6 @@ header.masthead .page-heading .subheading,header.masthead .site-heading .subhead
  }
 }
 
-.title {
-	padding-bottom: 25px;
-	font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-}
-
-.title h3 {
-	color: #212529;
-	font-weight: bold;
-	text-transform:uppercase;
-	padding-top: 15px;
-	padding-bottom: 50px;
-	font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-}
-
-.title hr {
-	border: 4px solid;
-    border-color: #556877;
-	border-radius: 5px;
-	width: 80px;
-	margin: 0px;
-}
-
 .boxes .card {
   position: relative;
   overflow: hidden;
@@ -109,5 +87,27 @@ header.masthead .page-heading .subheading,header.masthead .site-heading .subhead
 }
 
 .boxes .card-img-top {
-  height: 300px;
+  height: 250px;
+}
+
+.btn {
+	font-size:14px;
+	font-weight:800;
+	padding:15px 25px;
+	letter-spacing:1px;
+	text-transform:uppercase;
+	border-radius:10px;
+	font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif
+}
+
+.boxes p {
+  padding: 0;
+  margin: 0 0 30px 0;
+}
+
+.boxes h3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  margin: 0 0 20px 0;
+  padding: 0;
 }
