--- a/code/css/main.css
+++ b/code/css/main.css
@@ -86,23 +86,16 @@ header.masthead .page-heading .subheading,header.masthead .site-heading .subhead
   text-decoration: none;
 }
 
-.boxes .card-img-top {
-  height: 250px;
-}
-
-.btn {
-	font-size:14px;
-	font-weight:800;
-	padding:15px 25px;
-	letter-spacing:1px;
-	text-transform:uppercase;
-	border-radius:10px;
-	font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif
-}
-
 .boxes p {
   padding: 0;
   margin: 0 0 30px 0;
+}
+
+.boxes .counter {
+  color: #007bff;
+  text-decoration: bold;
+  font-size: 20px;
+  font-weight:600;
 }
 
 .boxes h3 {
